--- a/inst/tutorials/19_2/19_2.Rmd
+++ b/inst/tutorials/19_2/19_2.Rmd
@@ -4,6 +4,7 @@ subtitle: "Conducting & Presenting Research: Graphics"
 output: 
   learnr::tutorial:
     progressive: true
+    allow_skip: true
 runtime: shiny_prerendered
 author: 
   name: "Created by [Jim Bang](http://www.github.com/bangecon)"
