--- a/inst/tutorials/19_2_Practice/19_2_Practice.Rmd
+++ b/inst/tutorials/19_2_Practice/19_2_Practice.Rmd
@@ -5,6 +5,7 @@ subtitle: |
 output: 
   learnr::tutorial:
     progressive: true
+    allow_skip: true
 runtime: shiny_prerendered
 author: 
   name: "Created by [Jim Bang](http://www.github.com/bangecon)"
