--- a/inst/tutorials/11_1/11_1.Rmd
+++ b/inst/tutorials/11_1/11_1.Rmd
@@ -1,26 +1,38 @@
 ---
-output: slidy_presentation
-runtime: shiny_prerendered
-title: "Chapter 11 \n\n Advanced Time Series \n\n Problems with OLS in Time Series"
+title: "Chapter 11" 
+subtitle: "Advanced Time Series"
 description: >
-  This tutorial introduces some problems specific to time series (and panel data) in regression analysis.
+  This tutorial introduces some problems specific to time series in regression analysis.
+author: 
+  name: "Created by [Jim Bang](http://www.github.com/bangecon)"
+  email: BangJamesT@sau.edu
+  affiliation: "[St. Ambrose University](http://www.sau.edu)"
+date: "`r format(Sys.Date(), '%d %b %Y')`"
+output: 
+  learnr::tutorial:
+    progressive: true
+    allow_skip: true
+runtime: shiny_prerendered
+always_allow_html: yes
 editor_options: 
   markdown: 
     wrap: 72
 ---
 
+<style type="text/css">
+h1{font-size: 24pt}
+h2{font-size: 20pt}
+h3{font-size: 18pt}
+h4,h5,h6{font-size: 16pt}
+body{font-size: 16pt}
+</style>
+
 ```{r setup, include=FALSE}
 library(learnr)
 library(gradethis)
-library(dynlm)
-library(stargazer)
-library(wooldridge)
-nyse <- wooldridge::nyse
-nyse.ts <- ts(nyse)
-fertil3 <- wooldridge::fertil3
-fertil3.ts <- ts(fertil3)
+tutorial_options(exercise.eval = TRUE, exercise.reveal_solution = TRUE)
 gradethis::gradethis_setup()
-knitr::opts_chunk$set(echo = FALSE)
+knitr::opts_chunk$set(echo = FALSE, fig.height= 9, fig.width=8)
 ```
 
 ## Classical Assumptions
