--- a/inst/tutorials/13_2/13_2.Rmd
+++ b/inst/tutorials/13_2/13_2.Rmd
@@ -1,35 +1,37 @@
 ---
-output: slidy_presentation
-runtime: shiny_prerendered
 title: "Chapter 13 \n\n Pooled Cross Sections and \n\n Difference-in-Differences Estimation"
-author: "James Bang"
 description: >
   This tutorial introduces simple panel methods.
+author: 
+  name: "Created by [Jim Bang](http://www.github.com/bangecon)"
+  email: BangJamesT@sau.edu
+  affiliation: "[St. Ambrose University](http://www.sau.edu)"
+date: "`r format(Sys.Date(), '%d %b %Y')`"
+output: 
+  learnr::tutorial:
+    progressive: true
+    allow_skip: true
+runtime: shiny_prerendered
+always_allow_html: yes
+editor_options: 
+  markdown: 
+    wrap: 72
 ---
+
+<style type="text/css">
+h1{font-size: 24pt}
+h2{font-size: 20pt}
+h3{font-size: 18pt}
+h4,h5,h6{font-size: 16pt}
+body{font-size: 16pt}
+</style>
 
 ```{r setup, include=FALSE}
 library(learnr)
-library(wooldridge)
-library(plm)
-library(gtsummary)
-library(stargazer)
-crime2 <- wooldridge::crime2
-crime2$id <- factor(rank(crime2$area, ties.method = 'max')/2)
-crime2.pdata <- pdata.frame(crime2, index = c('id', 'd87'))
-crime2.pdata$dcrmrte <- diff(crime2.pdata$crmrte)
-crime2.pdata$dunem   <- diff(crime2.pdata$unem)
-crime2.lm1 <- lm(crmrte ~ d87 + unem + id, data = crime2)
-crime2.lm2 <- lm(dcrmrte ~ dunem, data = crime2.pdata)
-crime2.plm1 <- plm(crmrte~unem, data = crime2.pdata, model = 'fd')
-crime4 <- wooldridge::crime4
-crime4.p <- pdata.frame(crime4, index=c("county","year") )
-crime4.p$cr.l <- lag(crime4.p$crmrte)
-crime4.p$cr.d <- diff(crime4.p$crmrte)
-crime4.p$cr.B <- Between(crime4.p$crmrte)
-crime4.p$cr.W <- Within(crime4.p$crmrte)
-crime4.p[1:16,c("county","year","crmrte","cr.l","cr.d","cr.B","cr.W")]
-summary(plm(log(crmrte)~factor(year)+lprbarr+lprbconv+lprbpris+lavgsen+lpolpc,data=crime4.p, model="fd") )
-knitr::opts_chunk$set(echo = FALSE)
+library(gradethis)
+tutorial_options(exercise.eval = TRUE, exercise.reveal_solution = TRUE)
+gradethis::gradethis_setup()
+knitr::opts_chunk$set(echo = FALSE, fig.height= 9, fig.width=8)
 ```
 
 ## Organizing Panel Data
