--- a/inst/tutorials/14_1_Practice/14_1_Practice.rmd
+++ b/inst/tutorials/14_1_Practice/14_1_Practice.rmd
@@ -1,26 +1,38 @@
 ---
-output: slidy_presentation
-runtime: shiny_prerendered
-title: "Chapter 14 \n\n Advanced Panel Data Methods"
-author: "James Bang"
+title: "Chapter 14"
+subtitle: "Advanced Panel Data Methods"
 description: >
   This tutorial practices fixed effects and random effects estimators.
+author: 
+  name: "Created by [Jim Bang](http://www.github.com/bangecon)"
+  email: BangJamesT@sau.edu
+  affiliation: "[St. Ambrose University](http://www.sau.edu)"
+date: "`r format(Sys.Date(), '%d %b %Y')`"
+output: 
+  learnr::tutorial:
+    progressive: true
+    allow_skip: true
+runtime: shiny_prerendered
+always_allow_html: yes
+editor_options: 
+  markdown: 
+    wrap: 72
 ---
+
+<style type="text/css">
+h1{font-size: 24pt}
+h2{font-size: 20pt}
+h3{font-size: 18pt}
+h4,h5,h6{font-size: 16pt}
+body{font-size: 16pt}
+</style>
 
 ```{r setup, include=FALSE}
 library(learnr)
-library(wooldridge)
-library(plm)
-library(stargazer)
-wagepan <- wooldridge::wagepan
-wagepan.p <- pdata.frame(wagepan, index=c("nr","year") )
-wagepan.lm <- plm(lwage~educ+black+hisp+exper+I(exper^2)+married+union+factor(year), 
-                  data=wagepan.p, model="pooling")
-wagepan.fe <- plm(lwage~educ+black+hisp+exper+I(exper^2)+married+union+factor(year), 
-                  data=wagepan.p, model="within")
-wagepan.re <- plm(lwage~educ+black+hisp+exper+I(exper^2)+married+union+factor(year), 
-                  data=wagepan.p, model="random")
-knitr::opts_chunk$set(echo = FALSE)
+library(gradethis)
+tutorial_options(exercise.eval = TRUE, exercise.reveal_solution = TRUE)
+gradethis::gradethis_setup()
+knitr::opts_chunk$set(echo = FALSE, fig.height= 9, fig.width=8)
 ```
 
 ## Panel Data Practice
