--- a/inst/tutorials/15_2/15_2.Rmd
+++ b/inst/tutorials/15_2/15_2.Rmd
@@ -1,23 +1,36 @@
 ---
-output: slidy_presentation
+title: "Chapter 15"
+subtitle: "Alternatives to Instrumental Variables"
+author: 
+  name: "Created by [Jim Bang](http://www.github.com/bangecon)"
+  email: BangJamesT@sau.edu
+  affiliation: "[St. Ambrose University](http://www.sau.edu)"
+date: "`r format(Sys.Date(), '%d %b %Y')`"
+output: 
+  learnr::tutorial:
+    progressive: true
+    allow_skip: true
 runtime: shiny_prerendered
-title: "Chapter 15 \n\n Alternatives to Instrumental Variables"
-author: "James Bang"
-description: >
-  This tutorial introduces matching and balancing methods. 
+always_allow_html: yes
+editor_options: 
+  markdown: 
+    wrap: 72
 ---
 
-```{r setup, include=FALSE}
-library(tidyverse)
-library(haven)
-library(stargazer)
-library(MatchIt)
-library(cem)
-library(estimatr)
-library(gtsummary)
+<style type="text/css">
+h1{font-size: 24pt}
+h2{font-size: 20pt}
+h3{font-size: 18pt}
+h4,h5,h6{font-size: 16pt}
+body{font-size: 16pt}
+</style>
 
+```{r setup, include=FALSE}
+library(learnr)
+library(gradethis)
+tutorial_options(exercise.eval = TRUE, exercise.reveal_solution = TRUE)
 gradethis::gradethis_setup()
-knitr::opts_chunk$set(echo = FALSE)
+knitr::opts_chunk$set(echo = FALSE, fig.height= 9, fig.width=8)
 ```
 
 ## Simple Mean Comparison
