--- a/inst/tutorials/19_1_Practice/19_1_Practice.Rmd
+++ b/inst/tutorials/19_1_Practice/19_1_Practice.Rmd
@@ -2,6 +2,7 @@
 output: 
   learnr::tutorial:
     progressive: true
+    allow_skip: true
 runtime: shiny_prerendered
 title: "Chapter 19"
 subtitle: |
