--- a/inst/tutorials/1_1/1_1.Rmd
+++ b/inst/tutorials/1_1/1_1.Rmd
@@ -2,6 +2,7 @@
 output: 
   learnr::tutorial:
     progressive: true
+    allow_skip: true
 runtime: shiny_prerendered
 title:  "Chapter 1" 
 subtitle:  |
