--- a/inst/tutorials/2_1/2_1.Rmd
+++ b/inst/tutorials/2_1/2_1.Rmd
@@ -5,6 +5,7 @@ description: "This tutorial introduces the basic concepts of linear regression w
 output: 
   learnr::tutorial:
     progressive: true
+    allow_skip: true
 runtime: shiny_prerendered
 author: 
   name: "Created by [Jim Bang](http://www.github.com/bangecon)"
