--- a/inst/tutorials/C_1/C_1.Rmd
+++ b/inst/tutorials/C_1/C_1.Rmd
@@ -2,6 +2,7 @@
 output: 
   learnr::tutorial:
     progressive: true
+    allow_skip: true
 runtime: shiny_prerendered
 title: "Appendix C"
 subtitle: |
@@ -114,7 +115,7 @@ grade_code()
 
 Showing that dividing by $n-1$ instead of $n$ eliminates this bias involves a similar trick: 
 
-$$\begin{align} E(s^2) &= E[\frac{1}{n-1}\sum_{i=1}^{n}((X_i-\mu)^2-(\bar{X}-\mu)^2)] \\
+$$\begin{align} E(s^2) &= E\bigg[\frac{1}{n-1}\sum_{i=1}^{n}((X_i-\mu)^2-(\bar{X}-\mu)^2)\bigg] \\
 &= E[\frac{1}{n-1} \sum_{i=1}^{n}(X_i-\mu)^2 - \frac{2}{n-1}(\bar{X}-\mu)\sum_{i=1}^{n}(X_i-\mu) + \frac{n}{n-1}(\bar{X}-\mu)^2 \\
 &= \frac{n}{n-1}V(X) - \frac{n}{n-1}E[(\bar{X}-\mu)^2] \\ 
 &= \frac{n}{n-1}V(X) - \frac{1}{n-1}V(X) = V(X) \end{align}$$
@@ -157,7 +158,7 @@ $$ \Pr(\lim_{n \to \infty} \bar{x}_n=\mu) = 1$$
 
 for any $\epsilon > 0$.
 
-### Simulating LLN
+### Simulating LLN {data-allow-skip=TRUE}
 
 Let *X* be a random variable that follows a Poisson distribution with parameter $\lambda = 1$. 
 
