--- a/inst/tutorials/4_2/4_2.Rmd
+++ b/inst/tutorials/4_2/4_2.Rmd
@@ -37,7 +37,7 @@ knitr::opts_chunk$set(echo = FALSE)
 ## Occupation and Wages
 
 Regress wage on education, experience, experience squared, job tenure, and occupation type using `wage1`. Summarize the result. 
-$$\begin{align}wage ={} &\beta_0 + \beta_1educ + \beta_2exper + \beta_3exper^2 + \beta_4tenure + \\ & \beta_5profocc + \beta_6clerocc + \beta_7servocc + u \end{align}$$
+$$\begin{align}wage &= \beta_0 + \beta_1educ + \beta_2exper + \beta_3exper^2 + \beta_4tenure \\ &+ \beta_5profocc + \beta_6clerocc + \beta_7servocc + u \end{align}$$
 
 ```{r tTestReview, exercise = TRUE}
 
@@ -95,8 +95,8 @@ Under $H_0$, $\beta_6 - \beta_7 = 0$
 
 If the OLS assumptions hold, then under $H_0$, $\beta_6 - \beta_7 = 0$. 
 
-1. $E(\hat\beta_6 - \hat\beta_7) = 0$ 
-2. $Var(\hat\beta_6 - \hat\beta_7) = Var(\hat\beta_6) + Var(\hat\beta_7) - 2Cov(\hat\beta_6,\hat\beta_7)$<br>
+1. $E(\hat\beta_6 - \hat\beta_7) = 0$  
+2. $Var(\hat\beta_6 - \hat\beta_7) = Var(\hat\beta_6) + Var(\hat\beta_7) - 2Cov(\hat\beta_6,\hat\beta_7)$<br>  
 $se_{\hat\beta_6 - \hat\beta_7} = \sqrt{Var(\hat\beta_6) + Var(\hat\beta_7) - 2Cov(\hat\beta_6,\hat\beta_7)}$
 
 Since the parameter estimates are normally distributed, and the variances are $\chi^2$, the test statistic, 
@@ -167,21 +167,21 @@ $$ H_1: \begin{pmatrix} \beta_{profocc} \\ \beta_{servocc} \\ \beta_{clerocc} \e
 
 There are a couple of different (but equivalent) ways to calculate the F-Statistic for the joint significance of a group of variables. They involve the same basic steps. 
 
-1. Estimate the unrestricted model (the full model) and store the $R^2$ *or* the residual sum of squares (SSR). 
-2. Estimate the restricted model (which *excludes* the variables you wish to test) and store the $R^2$ or SSR. 
-3. Calculate the F statistic: 
-  a. Formula using SSR: $F = \frac{(SSR_r - SSR_u)/q}{SSR_u/(n-k-1)}$
-  b. Formula using $R^2$: $F = \frac{(R_u^2 - R_r^2)/q}{(1-R_u^2/(n-k-1)} $
-  c. These formulas are equivalent since $R^2 = 1 - \frac{SSR}{SST}$
+1. Estimate the unrestricted model (the full model) and store the $R^2$ *or* the residual sum of squares (SSR).  
+2. Estimate the restricted model (which *excludes* the variables you wish to test) and store the $R^2$ or SSR.  
+3. Calculate the F statistic:  
+  a. Formula using SSR: $F = \frac{(SSR_r - SSR_u)/q}{SSR_u/(n-k-1)}$  
+  b. Formula using $R^2$: $F = \frac{(R_u^2 - R_r^2)/q}{(1-R_u^2/(n-k-1)}$  
+  c. These formulas are equivalent since $R^2 = 1 - \frac{SSR}{SST}$  
 
 ### Differences in Wages among All Occupational Groups
 
 Test the joint significance of occupational choice on wages "by hand" using the $R^2$ formula:  
 
-1. Estimate the unrestricted model and the restricted model (without occupations). 
-2. Extract the R-squareds.
-3. Compute the F statistic using the equation from 3(b) above. 
-4. Calculate and print the p-value.
+1. Estimate the unrestricted model and the restricted model (without occupations).  
+2. Extract the R-squareds.  
+3. Compute the F statistic using the equation from 3(b) above.  
+4. Calculate and print the p-value.  
 
 Report (3) and (4) as a `c()` vector.
 
