--- a/inst/tutorials/6_2/6_2.Rmd
+++ b/inst/tutorials/6_2/6_2.Rmd
@@ -40,7 +40,7 @@ knitr::opts_chunk$set(echo = FALSE)
 
 Suppose we want to estimate the following model of (standardized) final exam scores: 
 
-$$ Final = \beta_0 + \beta_1Attendance + \beta_2PriorGPA + \beta_3ACT + \beta_4PriorGPA^2 + \beta_5ACT^2$$
+$$\begin{align}Final &= \beta_0 + \beta_1Attendance + \beta_2PriorGPA + \beta_3ACT \\ &+ \beta_4PriorGPA^2 + \beta_5ACT^2 \end{align}$$
 where: 
 
 $Attendance =$ percentage of classes the student attended, `atndrte`<br>
@@ -49,7 +49,7 @@ $ACT =$ student's ACT score, `ACT`<br>
 
 We may suspect that the *effect* of attendance depends on, or is *moderated by*, prior GPA: Attendance might not matter as much for students who do perform well generally. Then, 
 
-$$ Final = \beta_0 + \beta_1Attendance + \beta_2PriorGPA + \beta_3ACT + \beta_4PriorGPA^2 + \beta_5ACT^2 + \beta_6PriorGPA \cdot Attendance + u $$
+$$\begin{align}Final &= \beta_0 + \beta_1Attendance + \beta_2PriorGPA + \beta_3ACT \\ &+ \beta_4PriorGPA^2 + \beta_5ACT^2 + \beta_6PriorGPA \cdot Attendance + u \end{align}$$
 $\hat\beta_1 =$ effect of attendance on final performance *when prior GPA equals zero*. 
 
 What we (probably) want to know: The effect of attendance on final performance *at the mean* (of prior GPA and other variables): $\frac{\delta{Final}}{\delta{Attendance}}\Big\rvert_{PriorGPA = \bar{x}_{PriorGPA}} = \beta_1 + \beta_6 \cdot \bar{x}_{PriorGPA}$ 
@@ -165,7 +165,7 @@ Adding a control that directly causes $y$ and is *correlated* with $x$ is tricky
 1. Adding the control helps by reducing omitted-variable bias; 
 2. Adding the control hurts by increasing the variance. 
 
-Things get even trickier when the control only *indirectly* causes $y$ through $x$ (collider bias), or when $x$ inflences the control on the way to causing the outcome (post-treatment effect bias). 
+Things get even trickier when the control only indirectly *causes* $y$ *through* $x$ (collider bias), or when $x$ inflences the control on the way to causing the outcome (post-treatment effect bias). 
 
 Be careful adding controls! 
 
